test/sema/typeck/enum/missing-arguments.dora
fn f(): Option[Int64] {
    Some[Int64]
}
